Fixes collapsing of section margins

--- a/src/app/common/components/content-section/content-section.component.scss
+++ b/src/app/common/components/content-section/content-section.component.scss
@@ -1,15 +1,11 @@
+:host {
+  margin: 40px;
+}
+
 .content-section-wrapper {
-  padding: 60px 75px;
+  padding: 0 40px;
 
   &.alt-section-style {
     background: #f1f1f1;
   }
-}
-
-.content-section-title {
-  margin-top: 0;
-}
-
-.content-section-body {
-  margin: 0 25px;
 }
