--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -20,6 +20,7 @@
   flex-wrap:       wrap;
   gap:             100px;
   justify-content: center;
+  padding:         25px 0;
 }
 
 .about-content {
